feat: update API for user page's history
